map must be immutable for check-android-26-compliance validation